// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`assetMinBuilder assetRegistry assetMetadatas should be correct config 1`] = `
QueryConfig {
  "args": [
    "<ASSET>",
  ],
  "func": "assetMetadatas",
  "module": "assetRegistry",
  "transform": [Function],
  "type": "Substrate",
}
`;

exports[`assetMinBuilder assetRegistry currencyMetadatas should be correct config 1`] = `
QueryConfig {
  "args": [
    "<ASSET>",
  ],
  "func": "currencyMetadatas",
  "module": "assetRegistry",
  "transform": [Function],
  "type": "Substrate",
}
`;

exports[`assetMinBuilder assets asset should be correct config 1`] = `
QueryConfig {
  "args": [
    "<ASSET>",
  ],
  "func": "asset",
  "module": "assets",
  "transform": [Function],
  "type": "Substrate",
}
`;
